@@ -375,6 +375,25 @@
 # listener port-number [ip address/host name]
 #listener
 
+# By default, a listener will attempt to listen on all supported IP protocol
+# versions. If you do not have an IPv4 or IPv6 interface you may wish to
+# disable support for either of those protocol versions. In particular, note
+# that due to the limitations of the websockets library, it will only ever
+# attempt to open IPv6 sockets if IPv6 support is compiled in, and so will fail
+# if IPv6 is not available.
+#
+# Set to `ipv4` to force the listener to only use IPv4, or set to `ipv6` to
+# force the listener to only use IPv6. If you want support for both IPv4 and
+# IPv6, then do not use the socket_domain option.
+#
+# On systems that support Unix Domain Sockets, this option can also be used to
+# create a Unix socket rather than opening a TCP socket. In this case, the
+# option should be in the form:
+# socket_domain unix <path to socket>
+# e.g. `socket_domain unix /tmp/mosquitto.sock`
+#
+#socket_domain
+
 # Bind the listener to a specific interface. This is similar to
 # the [ip address/host name] part of the listener definition, but is useful
 # when an interface has multiple addresses or the address may change. It is
